[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcare-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-anthropic>=0.3.15",
    "langchain-mistralai>=0.2.10",
    "langgraph>=0.4.8",
    "langgraph-cli[inmem]>=0.3.3",
    "pytz>=2025.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
