[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcare-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "langchain-anthropic>=0.3.15",
    "langchain-mistralai>=0.2.10",
    "langgraph>=0.4.8",
    "loguru>=0.7.3",
    "pytz>=2025.2",
    "twilio>=9.6.3",
    "uvicorn>=0.34.3",
    "pydantic-settings>=2.2.1",
    "pydantic>=2.11.7",
    "langchain-openai>=0.3.25",
    "langgraph-cli[inmem]>=0.3.3",
    "langchain>=0.3.26",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
